--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -218,6 +218,7 @@
      <Compile Include="Assets\SampleScenes\Scripts\PlaceTargetWithMouse.cs" />
      <Compile Include="Assets\SampleScenes\Scripts\SlowMoButton.cs" />
      <Compile Include="Assets\Scripts\Ads\AdController.cs" />
+     <Compile Include="Assets\Scripts\BoatController.cs" />
      <Compile Include="Assets\Scripts\BotController.cs" />
      <Compile Include="Assets\Scripts\CameraTracker.cs" />
      <Compile Include="Assets\Scripts\CrossController.cs" />
