add_pistol_loot

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -228,6 +228,7 @@
      <Compile Include="Assets\Scripts\Network\RoomController.cs" />
      <Compile Include="Assets\Scripts\PaintController.cs" />
      <Compile Include="Assets\Scripts\PirateController.cs" />
+     <Compile Include="Assets\Scripts\PistolController.cs" />
      <Compile Include="Assets\Scripts\PlayerLabelController.cs" />
      <Compile Include="Assets\Scripts\ShovelController.cs" />
      <Compile Include="Assets\Scripts\TreasureController.cs" />
